--- a/style.css
+++ b/style.css
@@ -90,6 +90,11 @@ audio {
   width: 30%;
   height: 100%;
   transition: 0.5s;
+  font-size: 0.8rem;
+}
+
+.slide .text {
+  padding:1rem;
 }
 
 .card:hover .slide {
