--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ audio {
 
 .card {
   color: white;
-  height: 4rem;
+  /* height: 4rem; */
   position: relative;
   overflow: hidden;
   cursor: pointer;
@@ -54,8 +54,7 @@ audio {
 
 .card .title {
   padding: 1rem;
-  font-size: 22px;
-  font-style: italic;
+  font-size: 16px;
 }
 
 .card:nth-child(1n+0) {
