--- a/style.css
+++ b/style.css
@@ -80,3 +80,14 @@ audio {
   transition: 1s;
   right: 0;
 }
+
+.slide {
+  background: rgba(255, 255, 255, 0.25);
+  backdrop-filter: blur(8px);
+  position: absolute;
+  right: -30%;
+  width: 30%;
+  height: 100%;
+  transition: 0.5s;
+  font-size: 0.8rem;
+}
