--- a/style.css
+++ b/style.css
@@ -46,8 +46,9 @@ audio {
 }
 
 .card {
+  -webkit-box-shadow: 2px 3px 29px 5px #000000;
+box-shadow: 2px 3px 29px 5px #000000;
   color: white;
-  /* height: 4rem; */
   position: relative;
   overflow: hidden;
   cursor: pointer;
