--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: 'Apercu'
-    src: url('ApercuRegular.ttf') format('ttf');
+  font-family: 'Apercu';
+  src: url('ApercuRegular.ttf') format('ttf');
   font-weight: 400;
 }
 
